parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> DeclList Procedures
Rule 2     Program -> Procedures
Rule 3     Procedures -> ProcedureDecl Procedures
Rule 4     Procedures -> ProcedureDecl
Rule 5     ProcedureDecl -> ProcedureHead ProcedureBody
Rule 6     ProcedureHead -> FunctionDecl DeclList
Rule 7     ProcedureHead -> FunctionDecl
Rule 8     FunctionDecl -> Type IDENTIFIER LP RP LBR
Rule 9     ProcedureBody -> StatementList RBR
Rule 10    DeclList -> Type IdentifierList SC
Rule 11    DeclList -> DeclList Type IdentifierList SC
Rule 12    IdentifierList -> VarDecl
Rule 13    IdentifierList -> IdentifierList CM VarDecl
Rule 14    VarDecl -> IDENTIFIER
Rule 15    VarDecl -> IDENTIFIER LBK INTCON RBK
Rule 16    Type -> INT
Rule 17    Type -> FLOAT
Rule 18    StatementList -> Statement
Rule 19    StatementList -> StatementList Statement
Rule 20    Statement -> Assignment
Rule 21    Statement -> IfStatement
Rule 22    Statement -> WhileStatement
Rule 23    Statement -> IOStatement
Rule 24    Statement -> ReturnStatement
Rule 25    Statement -> ExitStatement
Rule 26    Statement -> CompoundStatement
Rule 27    Assignment -> Variable ASSIGN Expr SC
Rule 28    IfStatement -> IF Test CompoundStatement
Rule 29    IfStatement -> IF Test CompoundStatement ELSE CompoundStatement
Rule 30    Test -> LP Expr RP
Rule 31    WhileStatement -> WHILE WhileExpr Statement
Rule 32    WhileExpr -> LP Expr RP
Rule 33    IOStatement -> READ LP Variable RP SC
Rule 34    IOStatement -> WRITE LP Expr RP SC
Rule 35    IOStatement -> WRITE LP StringConstant RP SC
Rule 36    ReturnStatement -> RETURN Expr SC
Rule 37    ExitStatement -> EXIT SC
Rule 38    CompoundStatement -> LBR StatementList RBR
Rule 39    Expr -> Expr AND SimpleExpr
Rule 40    Expr -> Expr OR SimpleExpr
Rule 41    Expr -> SimpleExpr
Rule 42    Expr -> NOT SimpleExpr
Rule 43    SimpleExpr -> SimpleExpr EQ AddExpr
Rule 44    SimpleExpr -> SimpleExpr NE AddExpr
Rule 45    SimpleExpr -> SimpleExpr LE AddExpr
Rule 46    SimpleExpr -> SimpleExpr LT AddExpr
Rule 47    SimpleExpr -> SimpleExpr GE AddExpr
Rule 48    SimpleExpr -> SimpleExpr GT AddExpr
Rule 49    SimpleExpr -> AddExpr
Rule 50    AddExpr -> AddExpr PLUS MulExpr
Rule 51    AddExpr -> AddExpr MINUS MulExpr
Rule 52    AddExpr -> MulExpr
Rule 53    MulExpr -> MulExpr TIMES Factor
Rule 54    MulExpr -> MulExpr DIVIDE Factor
Rule 55    MulExpr -> Factor
Rule 56    Factor -> Variable
Rule 57    Factor -> Constant
Rule 58    Factor -> IDENTIFIER LP RP
Rule 59    Factor -> LP Expr RP
Rule 60    Variable -> IDENTIFIER
Rule 61    Variable -> IDENTIFIER LBK Expr RBK
Rule 62    StringConstant -> STRING
Rule 63    Constant -> INTCON
Rule 64    Constant -> FLOATCON

Terminals, with rules where they appear

AND                  : 39
ASSIGN               : 27
CM                   : 13
DIVIDE               : 54
ELSE                 : 29
EQ                   : 43
EXIT                 : 37
FLOAT                : 17
FLOATCON             : 64
GE                   : 47
GT                   : 48
IDENTIFIER           : 8 14 15 58 60 61
IF                   : 28 29
INT                  : 16
INTCON               : 15 63
LBK                  : 15 61
LBR                  : 8 38
LE                   : 45
LP                   : 8 30 32 33 34 35 58 59
LT                   : 46
MINUS                : 51
NE                   : 44
NOT                  : 42
OR                   : 40
PLUS                 : 50
RBK                  : 15 61
RBR                  : 9 38
READ                 : 33
RETURN               : 36
RP                   : 8 30 32 33 34 35 58 59
SC                   : 10 11 27 33 34 35 36 37
STRING               : 62
TIMES                : 53
WHILE                : 31
WRITE                : 34 35
error                : 

Nonterminals, with rules where they appear

AddExpr              : 43 44 45 46 47 48 49 50 51
Assignment           : 20
CompoundStatement    : 26 28 29 29
Constant             : 57
DeclList             : 1 6 11
ExitStatement        : 25
Expr                 : 27 30 32 34 36 39 40 59 61
Factor               : 53 54 55
FunctionDecl         : 6 7
IOStatement          : 23
IdentifierList       : 10 11 13
IfStatement          : 21
MulExpr              : 50 51 52 53 54
ProcedureBody        : 5
ProcedureDecl        : 3 4
ProcedureHead        : 5
Procedures           : 1 2 3
Program              : 0
ReturnStatement      : 24
SimpleExpr           : 39 40 41 42 43 44 45 46 47 48
Statement            : 18 19 31
StatementList        : 9 19 38
StringConstant       : 35
Test                 : 28 29
Type                 : 8 10 11
VarDecl              : 12 13
Variable             : 27 33 56
WhileExpr            : 31
WhileStatement       : 22

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . DeclList Procedures
    (2) Program -> . Procedures
    (10) DeclList -> . Type IdentifierList SC
    (11) DeclList -> . DeclList Type IdentifierList SC
    (3) Procedures -> . ProcedureDecl Procedures
    (4) Procedures -> . ProcedureDecl
    (16) Type -> . INT
    (17) Type -> . FLOAT
    (5) ProcedureDecl -> . ProcedureHead ProcedureBody
    (6) ProcedureHead -> . FunctionDecl DeclList
    (7) ProcedureHead -> . FunctionDecl
    (8) FunctionDecl -> . Type IDENTIFIER LP RP LBR

    INT             shift and go to state 6
    FLOAT           shift and go to state 7

    Program                        shift and go to state 1
    DeclList                       shift and go to state 2
    Procedures                     shift and go to state 3
    Type                           shift and go to state 4
    ProcedureDecl                  shift and go to state 5
    ProcedureHead                  shift and go to state 8
    FunctionDecl                   shift and go to state 9

state 1

    (0) S' -> Program .



state 2

    (1) Program -> DeclList . Procedures
    (11) DeclList -> DeclList . Type IdentifierList SC
    (3) Procedures -> . ProcedureDecl Procedures
    (4) Procedures -> . ProcedureDecl
    (16) Type -> . INT
    (17) Type -> . FLOAT
    (5) ProcedureDecl -> . ProcedureHead ProcedureBody
    (6) ProcedureHead -> . FunctionDecl DeclList
    (7) ProcedureHead -> . FunctionDecl
    (8) FunctionDecl -> . Type IDENTIFIER LP RP LBR

    INT             shift and go to state 6
    FLOAT           shift and go to state 7

    Procedures                     shift and go to state 10
    Type                           shift and go to state 11
    ProcedureDecl                  shift and go to state 5
    ProcedureHead                  shift and go to state 8
    FunctionDecl                   shift and go to state 9

state 3

    (2) Program -> Procedures .

    $end            reduce using rule 2 (Program -> Procedures .)


state 4

    (10) DeclList -> Type . IdentifierList SC
    (8) FunctionDecl -> Type . IDENTIFIER LP RP LBR
    (12) IdentifierList -> . VarDecl
    (13) IdentifierList -> . IdentifierList CM VarDecl
    (14) VarDecl -> . IDENTIFIER
    (15) VarDecl -> . IDENTIFIER LBK INTCON RBK

    IDENTIFIER      shift and go to state 13

    IdentifierList                 shift and go to state 12
    VarDecl                        shift and go to state 14

state 5

    (3) Procedures -> ProcedureDecl . Procedures
    (4) Procedures -> ProcedureDecl .
    (3) Procedures -> . ProcedureDecl Procedures
    (4) Procedures -> . ProcedureDecl
    (5) ProcedureDecl -> . ProcedureHead ProcedureBody
    (6) ProcedureHead -> . FunctionDecl DeclList
    (7) ProcedureHead -> . FunctionDecl
    (8) FunctionDecl -> . Type IDENTIFIER LP RP LBR
    (16) Type -> . INT
    (17) Type -> . FLOAT

    $end            reduce using rule 4 (Procedures -> ProcedureDecl .)
    INT             shift and go to state 6
    FLOAT           shift and go to state 7

    ProcedureDecl                  shift and go to state 5
    Procedures                     shift and go to state 15
    ProcedureHead                  shift and go to state 8
    FunctionDecl                   shift and go to state 9
    Type                           shift and go to state 16

state 6

    (16) Type -> INT .

    IDENTIFIER      reduce using rule 16 (Type -> INT .)


state 7

    (17) Type -> FLOAT .

    IDENTIFIER      reduce using rule 17 (Type -> FLOAT .)


state 8

    (5) ProcedureDecl -> ProcedureHead . ProcedureBody
    (9) ProcedureBody -> . StatementList RBR
    (18) StatementList -> . Statement
    (19) StatementList -> . StatementList Statement
    (20) Statement -> . Assignment
    (21) Statement -> . IfStatement
    (22) Statement -> . WhileStatement
    (23) Statement -> . IOStatement
    (24) Statement -> . ReturnStatement
    (25) Statement -> . ExitStatement
    (26) Statement -> . CompoundStatement
    (27) Assignment -> . Variable ASSIGN Expr SC
    (28) IfStatement -> . IF Test CompoundStatement
    (29) IfStatement -> . IF Test CompoundStatement ELSE CompoundStatement
    (31) WhileStatement -> . WHILE WhileExpr Statement
    (33) IOStatement -> . READ LP Variable RP SC
    (34) IOStatement -> . WRITE LP Expr RP SC
    (35) IOStatement -> . WRITE LP StringConstant RP SC
    (36) ReturnStatement -> . RETURN Expr SC
    (37) ExitStatement -> . EXIT SC
    (38) CompoundStatement -> . LBR StatementList RBR
    (60) Variable -> . IDENTIFIER
    (61) Variable -> . IDENTIFIER LBK Expr RBK

    IF              shift and go to state 28
    WHILE           shift and go to state 29
    READ            shift and go to state 30
    WRITE           shift and go to state 31
    RETURN          shift and go to state 32
    EXIT            shift and go to state 33
    LBR             shift and go to state 34
    IDENTIFIER      shift and go to state 35

    ProcedureBody                  shift and go to state 17
    StatementList                  shift and go to state 18
    Statement                      shift and go to state 19
    Assignment                     shift and go to state 20
    IfStatement                    shift and go to state 21
    WhileStatement                 shift and go to state 22
    IOStatement                    shift and go to state 23
    ReturnStatement                shift and go to state 24
    ExitStatement                  shift and go to state 25
    CompoundStatement              shift and go to state 26
    Variable                       shift and go to state 27

state 9

    (6) ProcedureHead -> FunctionDecl . DeclList
    (7) ProcedureHead -> FunctionDecl .
    (10) DeclList -> . Type IdentifierList SC
    (11) DeclList -> . DeclList Type IdentifierList SC
    (16) Type -> . INT
    (17) Type -> . FLOAT

    IF              reduce using rule 7 (ProcedureHead -> FunctionDecl .)
    WHILE           reduce using rule 7 (ProcedureHead -> FunctionDecl .)
    READ            reduce using rule 7 (ProcedureHead -> FunctionDecl .)
    WRITE           reduce using rule 7 (ProcedureHead -> FunctionDecl .)
    RETURN          reduce using rule 7 (ProcedureHead -> FunctionDecl .)
    EXIT            reduce using rule 7 (ProcedureHead -> FunctionDecl .)
    LBR             reduce using rule 7 (ProcedureHead -> FunctionDecl .)
    IDENTIFIER      reduce using rule 7 (ProcedureHead -> FunctionDecl .)
    INT             shift and go to state 6
    FLOAT           shift and go to state 7

    DeclList                       shift and go to state 36
    Type                           shift and go to state 37

state 10

    (1) Program -> DeclList Procedures .

    $end            reduce using rule 1 (Program -> DeclList Procedures .)


state 11

    (11) DeclList -> DeclList Type . IdentifierList SC
    (8) FunctionDecl -> Type . IDENTIFIER LP RP LBR
    (12) IdentifierList -> . VarDecl
    (13) IdentifierList -> . IdentifierList CM VarDecl
    (14) VarDecl -> . IDENTIFIER
    (15) VarDecl -> . IDENTIFIER LBK INTCON RBK

    IDENTIFIER      shift and go to state 13

    IdentifierList                 shift and go to state 38
    VarDecl                        shift and go to state 14

state 12

    (10) DeclList -> Type IdentifierList . SC
    (13) IdentifierList -> IdentifierList . CM VarDecl

    SC              shift and go to state 39
    CM              shift and go to state 40


state 13

    (8) FunctionDecl -> Type IDENTIFIER . LP RP LBR
    (14) VarDecl -> IDENTIFIER .
    (15) VarDecl -> IDENTIFIER . LBK INTCON RBK

    LP              shift and go to state 41
    SC              reduce using rule 14 (VarDecl -> IDENTIFIER .)
    CM              reduce using rule 14 (VarDecl -> IDENTIFIER .)
    LBK             shift and go to state 42


state 14

    (12) IdentifierList -> VarDecl .

    SC              reduce using rule 12 (IdentifierList -> VarDecl .)
    CM              reduce using rule 12 (IdentifierList -> VarDecl .)


state 15

    (3) Procedures -> ProcedureDecl Procedures .

    $end            reduce using rule 3 (Procedures -> ProcedureDecl Procedures .)


state 16

    (8) FunctionDecl -> Type . IDENTIFIER LP RP LBR

    IDENTIFIER      shift and go to state 43


state 17

    (5) ProcedureDecl -> ProcedureHead ProcedureBody .

    INT             reduce using rule 5 (ProcedureDecl -> ProcedureHead ProcedureBody .)
    FLOAT           reduce using rule 5 (ProcedureDecl -> ProcedureHead ProcedureBody .)
    $end            reduce using rule 5 (ProcedureDecl -> ProcedureHead ProcedureBody .)


state 18

    (9) ProcedureBody -> StatementList . RBR
    (19) StatementList -> StatementList . Statement
    (20) Statement -> . Assignment
    (21) Statement -> . IfStatement
    (22) Statement -> . WhileStatement
    (23) Statement -> . IOStatement
    (24) Statement -> . ReturnStatement
    (25) Statement -> . ExitStatement
    (26) Statement -> . CompoundStatement
    (27) Assignment -> . Variable ASSIGN Expr SC
    (28) IfStatement -> . IF Test CompoundStatement
    (29) IfStatement -> . IF Test CompoundStatement ELSE CompoundStatement
    (31) WhileStatement -> . WHILE WhileExpr Statement
    (33) IOStatement -> . READ LP Variable RP SC
    (34) IOStatement -> . WRITE LP Expr RP SC
    (35) IOStatement -> . WRITE LP StringConstant RP SC
    (36) ReturnStatement -> . RETURN Expr SC
    (37) ExitStatement -> . EXIT SC
    (38) CompoundStatement -> . LBR StatementList RBR
    (60) Variable -> . IDENTIFIER
    (61) Variable -> . IDENTIFIER LBK Expr RBK

    RBR             shift and go to state 44
    IF              shift and go to state 28
    WHILE           shift and go to state 29
    READ            shift and go to state 30
    WRITE           shift and go to state 31
    RETURN          shift and go to state 32
    EXIT            shift and go to state 33
    LBR             shift and go to state 34
    IDENTIFIER      shift and go to state 35

    Statement                      shift and go to state 45
    Assignment                     shift and go to state 20
    IfStatement                    shift and go to state 21
    WhileStatement                 shift and go to state 22
    IOStatement                    shift and go to state 23
    ReturnStatement                shift and go to state 24
    ExitStatement                  shift and go to state 25
    CompoundStatement              shift and go to state 26
    Variable                       shift and go to state 27

state 19

    (18) StatementList -> Statement .

    RBR             reduce using rule 18 (StatementList -> Statement .)
    IF              reduce using rule 18 (StatementList -> Statement .)
    WHILE           reduce using rule 18 (StatementList -> Statement .)
    READ            reduce using rule 18 (StatementList -> Statement .)
    WRITE           reduce using rule 18 (StatementList -> Statement .)
    RETURN          reduce using rule 18 (StatementList -> Statement .)
    EXIT            reduce using rule 18 (StatementList -> Statement .)
    LBR             reduce using rule 18 (StatementList -> Statement .)
    IDENTIFIER      reduce using rule 18 (StatementList -> Statement .)


state 20

    (20) Statement -> Assignment .

    RBR             reduce using rule 20 (Statement -> Assignment .)
    IF              reduce using rule 20 (Statement -> Assignment .)
    WHILE           reduce using rule 20 (Statement -> Assignment .)
    READ            reduce using rule 20 (Statement -> Assignment .)
    WRITE           reduce using rule 20 (Statement -> Assignment .)
    RETURN          reduce using rule 20 (Statement -> Assignment .)
    EXIT            reduce using rule 20 (Statement -> Assignment .)
    LBR             reduce using rule 20 (Statement -> Assignment .)
    IDENTIFIER      reduce using rule 20 (Statement -> Assignment .)


state 21

    (21) Statement -> IfStatement .

    RBR             reduce using rule 21 (Statement -> IfStatement .)
    IF              reduce using rule 21 (Statement -> IfStatement .)
    WHILE           reduce using rule 21 (Statement -> IfStatement .)
    READ            reduce using rule 21 (Statement -> IfStatement .)
    WRITE           reduce using rule 21 (Statement -> IfStatement .)
    RETURN          reduce using rule 21 (Statement -> IfStatement .)
    EXIT            reduce using rule 21 (Statement -> IfStatement .)
    LBR             reduce using rule 21 (Statement -> IfStatement .)
    IDENTIFIER      reduce using rule 21 (Statement -> IfStatement .)


state 22

    (22) Statement -> WhileStatement .

    RBR             reduce using rule 22 (Statement -> WhileStatement .)
    IF              reduce using rule 22 (Statement -> WhileStatement .)
    WHILE           reduce using rule 22 (Statement -> WhileStatement .)
    READ            reduce using rule 22 (Statement -> WhileStatement .)
    WRITE           reduce using rule 22 (Statement -> WhileStatement .)
    RETURN          reduce using rule 22 (Statement -> WhileStatement .)
    EXIT            reduce using rule 22 (Statement -> WhileStatement .)
    LBR             reduce using rule 22 (Statement -> WhileStatement .)
    IDENTIFIER      reduce using rule 22 (Statement -> WhileStatement .)


state 23

    (23) Statement -> IOStatement .

    RBR             reduce using rule 23 (Statement -> IOStatement .)
    IF              reduce using rule 23 (Statement -> IOStatement .)
    WHILE           reduce using rule 23 (Statement -> IOStatement .)
    READ            reduce using rule 23 (Statement -> IOStatement .)
    WRITE           reduce using rule 23 (Statement -> IOStatement .)
    RETURN          reduce using rule 23 (Statement -> IOStatement .)
    EXIT            reduce using rule 23 (Statement -> IOStatement .)
    LBR             reduce using rule 23 (Statement -> IOStatement .)
    IDENTIFIER      reduce using rule 23 (Statement -> IOStatement .)


state 24

    (24) Statement -> ReturnStatement .

    RBR             reduce using rule 24 (Statement -> ReturnStatement .)
    IF              reduce using rule 24 (Statement -> ReturnStatement .)
    WHILE           reduce using rule 24 (Statement -> ReturnStatement .)
    READ            reduce using rule 24 (Statement -> ReturnStatement .)
    WRITE           reduce using rule 24 (Statement -> ReturnStatement .)
    RETURN          reduce using rule 24 (Statement -> ReturnStatement .)
    EXIT            reduce using rule 24 (Statement -> ReturnStatement .)
    LBR             reduce using rule 24 (Statement -> ReturnStatement .)
    IDENTIFIER      reduce using rule 24 (Statement -> ReturnStatement .)


state 25

    (25) Statement -> ExitStatement .

    RBR             reduce using rule 25 (Statement -> ExitStatement .)
    IF              reduce using rule 25 (Statement -> ExitStatement .)
    WHILE           reduce using rule 25 (Statement -> ExitStatement .)
    READ            reduce using rule 25 (Statement -> ExitStatement .)
    WRITE           reduce using rule 25 (Statement -> ExitStatement .)
    RETURN          reduce using rule 25 (Statement -> ExitStatement .)
    EXIT            reduce using rule 25 (Statement -> ExitStatement .)
    LBR             reduce using rule 25 (Statement -> ExitStatement .)
    IDENTIFIER      reduce using rule 25 (Statement -> ExitStatement .)


state 26

    (26) Statement -> CompoundStatement .

    RBR             reduce using rule 26 (Statement -> CompoundStatement .)
    IF              reduce using rule 26 (Statement -> CompoundStatement .)
    WHILE           reduce using rule 26 (Statement -> CompoundStatement .)
    READ            reduce using rule 26 (Statement -> CompoundStatement .)
    WRITE           reduce using rule 26 (Statement -> CompoundStatement .)
    RETURN          reduce using rule 26 (Statement -> CompoundStatement .)
    EXIT            reduce using rule 26 (Statement -> CompoundStatement .)
    LBR             reduce using rule 26 (Statement -> CompoundStatement .)
    IDENTIFIER      reduce using rule 26 (Statement -> CompoundStatement .)


state 27

    (27) Assignment -> Variable . ASSIGN Expr SC

    ASSIGN          shift and go to state 46


state 28

    (28) IfStatement -> IF . Test CompoundStatement
    (29) IfStatement -> IF . Test CompoundStatement ELSE CompoundStatement
    (30) Test -> . LP Expr RP

    LP              shift and go to state 48

    Test                           shift and go to state 47

state 29

    (31) WhileStatement -> WHILE . WhileExpr Statement
    (32) WhileExpr -> . LP Expr RP

    LP              shift and go to state 50

    WhileExpr                      shift and go to state 49

state 30

    (33) IOStatement -> READ . LP Variable RP SC

    LP              shift and go to state 51


state 31

    (34) IOStatement -> WRITE . LP Expr RP SC
    (35) IOStatement -> WRITE . LP StringConstant RP SC

    LP              shift and go to state 52


state 32
